--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport"content="width=devece-width,initial-scale=1.0">
+    <meta name="viewport"content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>chapter9演習問題</title>
+    <title>10章課題</title>
   </head>
 
   <body>
